--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 		<artifactId>testng</artifactId>
 		<version>6.14.3</version>
 	</dependency>
+	<dependency>
+		<groupId>com.aventstack</groupId>
+		<artifactId>extentreports</artifactId>
+		<version>5.1.2</version>
+	</dependency>
 
   </dependencies>
 
