--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,9 @@
   <artifactId>maven-compiler-plugin</artifactId>
   <version>3.13.0</version>
   <configuration>
+	  <source>1.8</source>
+	<target>1.8</target>
+
     <fork>true</fork>
     <compilerArgs>
       <arg>--add-opens</arg>
@@ -83,6 +86,14 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.3.0</version>
+          				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<!-- <suiteXmlFiles>
+						<suiteXmlFile>src/test/resources/testrunners/testng_regressions.xml</suiteXmlFile>
+					</suiteXmlFiles>-->
+
+				</configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
